# pkg/bridgemodel/model.go
@@ -4,7 +4,9 @@
 
 package bridgemodel
 
+const REGISTRATION_AUTH_WILDCARD = "natssync.registration.*"
 const REGISTRATION_AUTH_SUBJECT = "natssync.registration.request"
+const UNREGISTRATION_AUTH_SUBJECT = "natssync.registration.unregister"
 const REGISTRATION_LIFECYCLE_ADDED = "natssync.registration.lifecyle.added"
 const REGISTRATION_LIFECYCLE_REMOVED = "natssync.registration.lifecyle.removed"
 const ACCOUNT_LIFECYCLE_REMOVED = "account.lifecyle.removed"  // TODO: This should probably be configurable
@@ -41,6 +43,16 @@ type RegistrationRequest struct {
 	//for reference, this is generated by the bridge server
 	LocationID string `json:"locationID"`
 }
+
+type UnRegistrationRequest struct {
+	AuthToken string `json:"authToken"`
+	LocationID string `json:"locationID"`
+}
+
 type RegistrationResponse struct {
+	Success bool `json:"success"`
+}
+
+type UnRegistrationResponse struct {
 	Success bool `json:"success"`
 }
